@@ -138,6 +138,10 @@ Release 0.20.1 - Unreleased
     HADOOP-5920. Fixes a testcase failure for TestJobHistory. 
     (Amar Kamat via ddas)
 
+    HDFS-26. Better error message to users when commands fail because of
+    lack of quota. Allow quota to be set even if the limit is lower than
+    current consumption. (Boris Shkolnik via rangadi)
+
 Release 0.20.0 - 2009-04-15
 
   INCOMPATIBLE CHANGES
